--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
-  
 {
-  "name": "Browser Sample",
-  "version": "1.1.0",
-  "main": "main.js"
+    "name": "my-electron-app",
+    "version": "0.1.0",
+    "author": "your name",
+    "description": "My Electron app",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron ."
+    }
 }
