--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "main": "main.js",
     "scripts": {
         "start": "electron ."
+    },
+    "devDependencies": {
+        "less": "^4.1.0"
     }
 }
