--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "electron ."
     },
     "devDependencies": {
+        "electron": "^11.2.0",
         "less": "^4.1.0"
     },
     "dependencies": {
